--- a/Makefile.gcc
+++ b/Makefile.gcc
@@ -208,13 +208,14 @@ $(LIBOBJS):	st.h version.h patchlvl.h
 man: sox.1 libst.3
 	$(RM) sox.txt libst.txt
 	nroff -man sox.1 | col -b > sox.txt
+	nroff -man soxexam.1 | col -b > sox.txt
 	nroff -man libst.3 | col -b > libst.txt
 
 install: sox
 	if [ -f $(BINDIR)/rec ] ; then $(RM) $(BINDIR)/rec ; fi
 	if [ -f $(MANDIR)/man1/rec.1 ] ; then $(RM) $(MANDIR)/man1/rec.1 ; fi
 	install -c -m 755 sox play $(BINDIR)
-	install -c -m 644 sox.1 play.1 $(MANDIR)/man1
+	install -c -m 644 sox.1 soxexam.1 play.1 $(MANDIR)/man1
 	ln -s $(BINDIR)/play $(BINDIR)/rec
 	ln -s $(MANDIR)/man1/play.1 $(MANDIR)/man1/rec.1
 
