--- a/Makefile.dos
+++ b/Makefile.dos
@@ -16,7 +16,7 @@ FOBJ	= 8svx.obj aiff.obj alsa.obj au.obj auto.obj avr.obj cdr.obj cvsd.obj \
 	  sndrtool.obj sunaudio.obj tx16w.obj voc.obj wav.obj wve.obj
 
 EOBJ	= avg.obj band.obj bandpass.obj breject.obj btrworth.obj chorus.obj \
-	  compand.obj copy.obj cut.obj deemphas.obj dyn.obj echo.obj \
+	  compand.obj copy.obj cut.obj deemphas.obj echo.obj \
 	  echos.obj filter.obj flanger.obj highp.obj highpass.obj lowp.obj \
           lowpass.obj map.obj mask.obj phaser.obj pick.obj polyphas.obj \
 	  rate.obj resample.obj reverb.obj reverse.obj split.obj \
