--- a/Makefile.gcc
+++ b/Makefile.gcc
@@ -33,7 +33,7 @@ FOBJ	= 8svx.o adpcm.o aiff.o alsa.o au.o auto.o avr.o cdr.o cvsd.o dat.o \
 	  sf.o smp.o sndrtool.o sunaudio.o tx16w.o voc.o wav.o wve.o
 
 EOBJ    = avg.o band.o bandpass.o breject.o btrworth.o chorus.o compand.o \
-          copy.o cut.o deemphas.o dyn.o echo.o echos.o filter.o flanger.o \
+          copy.o cut.o deemphas.o echo.o echos.o filter.o flanger.o \
           highp.o highpass.o lowp.o lowpass.o map.o mask.o phaser.o pick.o \
           polyphas.o rate.o resample.o reverb.o reverse.o split.o \
           stat.o swap.o vibro.o
