--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: cdbs,
                ladspa-sdk,
                libao-dev,
                libasound2-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
-               libavcodec-dev (>= 0.cvs20070301),
+               libavcodec-dev (>= 4:0.6.0),
                libavformat-dev,
                libavutil-dev,
                libgsm1-dev,
