Include SndFile/inttypes.h in distribution so that the msvc10 build succeeds.

--- a/msvc10/Makefile.am
+++ b/msvc10/Makefile.am
@@ -40,6 +40,7 @@ EXTRA_DIST= \
 	Mp3Lame/config.h \
 	Png/inttypes.h \
 	SndFile/config.h \
+	SndFile/inttypes.h \
 	SndFile/sndfile.h \
 	SndFile/sys/time.h \
 	SoX/soxconfig.h \
