--- a/msvc9/LibVorbis.vcproj
+++ b/msvc9/LibVorbis.vcproj
@@ -55,7 +55,7 @@
 				WarningLevel="3"
 				WarnAsError="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4244"
+				DisableSpecificWarnings="4244;4554"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -124,7 +124,7 @@
 				WarningLevel="3"
 				WarnAsError="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4244"
+				DisableSpecificWarnings="4244;4554"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
