sox should not depend on libsox configuration
The sox program currently uses soxconfig.h as the basis for some of its
runtime behavior. It should instead be less tightly coupled from libsox,
and should get runtime information about libsox by querying libsox.
This adds a new function, sox_version_info(), which reports information about
how libsox was compiled and what options it supports. sox now uses the data
from sox_version_info instead of using #ifdefs.

Also added variable sox_globals.use_threads. This is used instead of having
the client program call omp_set_num_threads. This decouples the underlying
threading implementation used by libsox from the threading implementation used
by the client, i.e. libsox links against OMP, but sox no longer needs to do so.

--- a/msvc10/.gitignore
+++ b/msvc10/.gitignore
@@ -1,7 +1,10 @@
 *.user
-Sox.suo
-Sox.ncb
-Sox.sdf
-Sox.opensdf
+Debug
+ipch
 Makefile
 Makefile.in
+Release
+Sox.ncb
+Sox.opensdf
+Sox.sdf
+Sox.suo
