Portability fixes for sox.h
The point of this change is to make sox.h more convenient and portable
for users of libsox. The libsox API should depend only on the system's
ABI and should be independent of soxconfig.h or CRT-specific
definitions. It should also minimize its impact on the program in which
it is included.

sox.h changes:
- Don't include soxstdint.h from sox.h. soxstdint.h includes
  soxconfig.h. The sox.h header should be self-contained for easy
  management, and should especially not depend on a non-constant header
  like soxconfig.h (which is different depending on how sox was built).
- Minimize the impact on client program by including as few headers as
  possible. stdio.h and stdlib.h aren't really needed to describe the
  libsox api, so remove them. stdarg.h is needed for va_list. stddef.h
  is needed to define size_t. limits.h is needed to get integer sizes.
  These headers were part of the 1989 C freestanding implementation, so
  there should be no problem in using them in 2011.
- Use limits.h to automatically determine appropriate 8, 16, 32, and 64
  bit types without referencing soxconfig.h. stdint.h would be even
  better, but there are still a few environments that don't have
  stdint.h. Any C implementation that has a long long type with
  corresponding macros in limits.h should work with this compile-time
  auto-detection. My GCC raises a warning about the use of long long, so
  GCC warnings had to be suppressed for this header. I'm hoping this will
  be enough to support most systems on which SoX is supported, but if I
  missed something, it shouldn't be too hard to add support for it.
- Use sox_intN_t instead of intN_t for the width-specified integer types
  referenced by sox.h. All types of the form intN_t, including int24_t,
  are potentially defined by stdint.h. Sox.h should not be defining any
  type that might be defined by a standard header. (With this change,
  sox.h is now "clean" in that every definition made in sox.h starts
  wit

--- a/msvc10/Makefile.am
+++ b/msvc10/Makefile.am
@@ -44,6 +44,4 @@ EXTRA_DIST= \
 	SndFile/inttypes.h \
 	SndFile/sndfile.h \
 	SndFile/sys/time.h \
-	SoX/soxconfig.h \
-	SoX/soxstdint.h
-
+	SoX/soxconfig.h
