--- a/msvc9/Makefile.am
+++ b/msvc9/Makefile.am
@@ -27,5 +27,4 @@ EXTRA_DIST= \
 	SndFile/inttypes.h \
 	SndFile/sndfile.h \
 	SndFile/sys/time.h \
-	Sox/soxconfig.h \
-	Sox/soxstdint.h
+	Sox/soxconfig.h
