Fix getopt to not use global state
Replace the existing getopt (uses global variables) with a new
implementation that uses no globals. The caller initializes an
lsx_getopt_t object via lsx_getopt_init, then repeatedly calls
lsx_getopt to get the parameters. The lsx_getopt API is fully
defined in sox.h, so sgetopt.h is no longer used). Deleted the
GNU implementation (getopt1.c is no longer used). Updated
effects.c to no longer adjust the global getopt state.
Updated effects and sox.c to use updated lsx_getopt.

Also deleted some of the dangling references to soxstdint.h.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,7 +57,7 @@ add_library(lib${PROJECT_NAME}
   effects                 formats_i               libsox_i
   effects_i               ${formats_srcs}         ${optional_srcs}
   effects_i_dsp           getopt
-  ${effects_srcs}         getopt1                 util
+  ${effects_srcs}         util
   formats                 libsox                  xmalloc
 )
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.c)
