--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,7 @@ optional(HAVE_SNDFILE sndfile.h sndfile sf_open sd2)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open w64)
 optional(HAVE_SNDFILE sndfile.h sndfile sf_open xi)
 optional(HAVE_SNDFILE_1_0_12 sndfile.h sndfile sf_open_virtual caf)
+optional(HAVE_SPEEXDSP speex/speex_preprocess.h speexdsp speex_preprocess_run speexdsp)
 optional(HAVE_SUN_AUDIOIO_H sun/audioio.h c ioctl sunaudio)
 if (NOT HAVE_SUN_AUDIOIO_H)
   optional(HAVE_SYS_AUDIOIO_H sys/audioio.h c ioctl sunaudio)
