--- a/debian/control
+++ b/debian/control
@@ -84,7 +84,7 @@ Description: Minimal set of SoX format libraries
  MATLAB/GNU Octave, Portable Voice Format, AMR and Sound Forge Audio Format.
 
 Package: libsox-fmt-alsa
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 s390 s390x sh3 sh3eb sh4 sh4eb sparc
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 lpia m32r m68k mips mipsel powerpc ppc64 s390 s390x sh3 sh3eb sh4 sh4eb sparc
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX alsa format I/O library
  SoX is the swiss army knife of sound processing.
